--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
-/.venv
-/__pycache__
+venv/
+
+*.pyc
+**/__pycache__/
+
+instance/
+
+.pytest_cache/
+.coverage
+htmlcov/
+
+dist/
+build/
+*.egg-info/
+
