--- a/requirements.txt
+++ b/requirements.txt
@@ -1,75 +1,7 @@
-aiohttp==3.9.5
-aiosignal==1.3.1
-annotated-types==0.6.0
-anyio==4.3.0
-asgiref==3.8.1
-asyncio-atexit==1.0.1
-attrs==23.2.0
-bce-python-sdk==0.9.11
-blinker==1.8.2
-certifi==2024.2.2
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-colorlog==6.8.2
-dataclasses-json==0.6.6
-erniebot==0.5.5
-erniebot-agent==0.5.2
-Flask==3.0.3
-Flask-Cors==4.0.1
-Flask-SSE==1.0.0
-frozenlist==1.4.1
-future==1.0.0
-gevent==24.2.1
-greenlet==3.0.3
-gunicorn==22.0.0
-idna==3.7
-iniconfig==2.0.0
-itsdangerous==2.2.0
-Jinja2==3.1.4
-jsonpatch==1.33
-jsonpointer==2.4
-jsonschema==4.22.0
-jsonschema-path==0.3.2
-jsonschema-specifications==2023.12.1
-langchain==0.2.0
-langchain-community==0.2.0
-langchain-core==0.2.0
-langchain-text-splitters==0.2.0
-langsmith==0.1.59
-lazy-object-proxy==1.10.0
-MarkupSafe==2.1.5
-marshmallow==3.21.2
-multidict==6.0.5
-mypy-extensions==1.0.0
-numpy==1.26.4
-openapi-schema-validator==0.6.2
-openapi-spec-validator==0.7.1
-orjson==3.10.3
-packaging==23.2
-pathable==0.4.3
-pluggy==1.5.0
-pycryptodome==3.20.0
-pydantic==2.7.1
-pydantic_core==2.18.2
-pytest==8.2.1
-python-dotenv==1.0.1
-PyYAML==6.0.1
-redis==5.0.4
-referencing==0.31.1
-requests==2.31.0
-rfc3339-validator==0.1.4
-rpds-py==0.18.1
-setuptools==70.0.0
-six==1.16.0
-sniffio==1.3.1
-SQLAlchemy==2.0.30
-tenacity==8.3.0
-tqdm==4.66.4
-typing-inspect==0.9.0
-typing_extensions==4.11.0
-urllib3==2.2.1
-Werkzeug==3.0.3
-yarl==1.9.4
-zope.event==5.0
-zope.interface==6.4.post2
+erniebot_agent==0.5.2
+fastapi==0.111.0
+langchain==0.2.1
+langchain_community==0.2.1
+langchain_core==0.2.1
+pydantic==2.7.2
+uvicorn==0.30.0
