--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,7 @@ fastapi==0.111.0
 langchain==0.2.1
 langchain_community==0.2.1
 langchain_core==0.2.1
-pydantic==2.7.2
+pydantic==1.10.13
+python-dotenv==1.0.1
+typing_extensions==4.12.0
 uvicorn==0.30.0
