--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ fastapi==0.111.0
 langchain==0.2.1
 langchain_community==0.2.1
 langchain_core==0.2.1
-pydantic==1.10.13
+pydantic
 python-dotenv==1.0.1
 typing_extensions==4.12.0
 uvicorn==0.30.0
+langserve[server]
