--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,13 @@ erniebot_agent==0.5.2
 fastapi==0.111.0
 langchain==0.2.1
 langchain_community==0.2.1
-langchain_core==0.2.1
+langchain_core==0.2.3
+python-dotenv==1.0.1
+typing_extensions==4.12.0
+uvicorn==0.30.0
 pydantic
 python-dotenv==1.0.1
 typing_extensions==4.12.0
 uvicorn==0.30.0
 langserve[server]
+redis
