--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,116 @@
-erniebot_agent==0.5.2
+aiohttp==3.9.5
+aiosignal==1.3.1
+annotated-types==0.7.0
+anyio==4.4.0
+asyncio-atexit==1.0.1
+attrs==23.2.0
+backoff==2.2.1
+bce-python-sdk==0.9.11
+beautifulsoup4==4.12.3
+certifi==2024.6.2
+cffi==1.16.0
+chardet==5.2.0
+charset-normalizer==3.3.2
+click==8.1.7
+colorlog==6.8.2
+cryptography==42.0.7
+dataclasses-json==0.6.6
+deepdiff==7.0.1
+dnspython==2.6.1
+docx==0.2.4
+email_validator==2.1.1
+emoji==2.12.1
+erniebot==0.5.5
+erniebot-agent==0.5.2
 fastapi==0.111.0
+fastapi-cli==0.0.4
+filetype==1.2.0
+frozenlist==1.4.1
+future==1.0.0
+greenlet==3.0.3
+h11==0.14.0
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.0
+idna==3.7
+Jinja2==3.1.4
+joblib==1.4.2
+jsonpatch==1.33
+jsonpath-python==1.0.6
+jsonpointer==2.4
+jsonschema==4.22.0
+jsonschema-path==0.3.2
+jsonschema-specifications==2023.12.1
 langchain==0.2.1
-langchain_community==0.2.1
-langchain_core==0.2.3
+langchain-community==0.2.1
+langchain-core==0.2.3
+langchain-text-splitters==0.2.0
+langdetect==1.0.9
+langserve==0.2.1
+langsmith==0.1.67
+lazy-object-proxy==1.10.0
+lxml==5.2.2
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+marshmallow==3.21.2
+mdurl==0.1.2
+multidict==6.0.5
+mypy-extensions==1.0.0
+nltk==3.8.1
+numpy==1.26.4
+openapi-schema-validator==0.6.2
+openapi-spec-validator==0.7.1
+ordered-set==4.1.0
+orjson==3.10.3
+packaging==23.2
+pathable==0.4.3
+pdfminer.six==20231228
+pillow==10.3.0
+pycparser==2.22
+pycryptodome==3.20.0
+pydantic==1.10.13
+pydantic_core==2.18.3
+Pygments==2.18.0
+pypdf==4.2.0
+pyproject-toml==0.0.10
+python-dateutil==2.9.0.post0
+python-docx==1.1.2
 python-dotenv==1.0.1
-typing_extensions==4.12.0
+python-iso639==2024.4.27
+python-magic==0.4.27
+python-multipart==0.0.9
+PyYAML==6.0.1
+rapidfuzz==3.9.3
+referencing==0.31.1
+regex==2024.5.15
+requests==2.32.3
+rfc3339-validator==0.1.4
+rich==13.7.1
+rpds-py==0.18.1
+setuptools==70.0.0
+shellingham==1.5.4
+six==1.16.0
+sniffio==1.3.1
+soupsieve==2.5
+SQLAlchemy==2.0.30
+sse-starlette==1.8.2
+starlette==0.37.2
+tabulate==0.9.0
+tenacity==8.3.0
+tiktoken==0.7.0
+toml==0.10.2
+tqdm==4.66.4
+typer==0.12.3
+typing-inspect==0.9.0
+typing_extensions==4.12.1
+ujson==5.10.0
+unstructured==0.14.3
+unstructured-client==0.22.0
+urllib3==2.2.1
 uvicorn==0.30.0
-pydantic
-python-dotenv==1.0.1
-typing_extensions==4.12.0
-uvicorn==0.30.0
-langserve[server]
-redis
+uvloop==0.19.0
+watchfiles==0.22.0
+websockets==12.0
+wheel==0.43.0
+wrapt==1.16.0
+yarl==1.9.4
