--- a/requirements.txt
+++ b/requirements.txt
@@ -68,7 +68,7 @@ pdfminer.six==20231228
 pillow==10.3.0
 pycparser==2.22
 pycryptodome==3.20.0
-pydantic==1.10.13
+pydantic
 pydantic_core==2.18.3
 Pygments==2.18.0
 pypdf==4.2.0
@@ -108,9 +108,9 @@ unstructured==0.14.3
 unstructured-client==0.22.0
 urllib3==2.2.1
 uvicorn==0.30.0
-uvloop==0.19.0
 watchfiles==0.22.0
 websockets==12.0
 wheel==0.43.0
 wrapt==1.16.0
 yarl==1.9.4
+python-magic-bin
