--- a/requirements.txt
+++ b/requirements.txt
@@ -106,7 +106,7 @@ ordered-set==4.1.0
 orjson==3.10.3
 packaging==23.2
 paddleocr==2.7.3
-paddlepaddle-gpu==2.6.1.post120
+paddlepaddle-gpu==2.6.1
 pandas==2.2.2
 parso==0.8.4
 patch-ng==1.17.4
@@ -123,7 +123,7 @@ pure-eval==0.2.2
 pyclipper==1.3.0.post5
 pycparser==2.22
 pycryptodome==3.20.0
-pydantic==1.10.13
+pydantic
 pydantic_core==2.18.3
 Pygments==2.18.0
 PyMuPDF==1.24.5
