--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+coloredlogs==15.0.1
 colorlog==6.8.2
 comm==0.2.2
 contourpy==1.2.1
@@ -33,6 +34,8 @@ decorator==5.1.1
 deepdiff==7.0.1
 dnspython==2.6.1
 docx==0.2.4
+dynaconf==3.2.5
+ecdsa
 email_validator==2.1.1
 emoji==2.12.1
 erniebot==0.5.5
@@ -45,14 +48,16 @@ filetype==1.2.0
 fire==0.6.0
 Flask==3.0.3
 flask-babel==4.0.0
+flatbuffers==24.3.25
 fonttools==4.53.0
 frozenlist==1.4.1
-future==1.0.0
+future
 greenlet==3.0.3
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
+humanfriendly==10.0
 idna==3.7
 imageio==2.34.1
 imgaug==0.4.0
@@ -89,12 +94,15 @@ matplotlib==3.9.0
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 more-itertools==10.2.0
+mpmath==1.3.0
 multidict==6.0.5
 mypy-extensions==1.0.0
 nest-asyncio==1.6.0
 networkx==3.3
 nltk==3.8.1
 numpy==1.26.4
+onnx==1.14.1
+onnxruntime==1.16.0
 openapi-schema-validator==0.6.2
 openapi-spec-validator==0.7.1
 opencv-contrib-python==4.6.0.66
@@ -106,7 +114,7 @@ ordered-set==4.1.0
 orjson==3.10.3
 packaging==23.2
 paddleocr==2.7.3
-paddlepaddle-gpu==2.6.1
+paddlepaddle-gpu==2.6.1.post120
 pandas==2.2.2
 parso==0.8.4
 patch-ng==1.17.4
@@ -120,9 +128,11 @@ prompt_toolkit==3.0.46
 protobuf==3.20.2
 psutil==5.9.8
 pure-eval==0.2.2
+pyasn1 
 pyclipper==1.3.0.post5
+pycocotools==2.0.7
 pycparser==2.22
-pycryptodome==3.20.0
+pycryptodome
 pydantic
 pydantic_core==2.18.3
 Pygments==2.18.0
@@ -135,6 +145,7 @@ python-dateutil==2.9.0.post0
 python-docx==1.1.2
 python-dotenv==1.0.1
 python-iso639==2024.4.27
+python-jose
 python-magic==0.4.27
 python-magic-bin==0.4.14
 python-multipart==0.0.9
@@ -150,9 +161,9 @@ requests==2.32.3
 rfc3339-validator==0.1.4
 rich==13.7.1
 rpds-py==0.18.1
+rsa 
 scikit-image==0.23.2
 scipy==1.13.1
-setuptools==70.0.0
 shapely==2.0.4
 shellingham==1.5.4
 six==1.16.0
@@ -162,6 +173,7 @@ SQLAlchemy==2.0.30
 sse-starlette==1.8.2
 stack-data==0.6.3
 starlette==0.37.2
+sympy==1.12.1
 tabulate==0.9.0
 tenacity==8.3.0
 termcolor==2.4.0
@@ -185,6 +197,5 @@ watchfiles==0.22.0
 wcwidth==0.2.13
 websockets==12.0
 Werkzeug==3.0.3
-wheel==0.43.0
 wrapt==1.16.0
 yarl==1.9.4
