--- a/settings.toml
+++ b/settings.toml
@@ -1,10 +1,12 @@
-[development]
-    LOG_LEVEL='DEBUG'
-    HOST='localhost'
-    PORT=8000
-RELOAD = 'False'
+[DEVELOPMENT]
+LOG_LEVEL = 'DEBUG'
+HOST = 'localhost'
+PORT = 8000
+
+[DEVELOPMENT.AUTH]
+ALGORITHM = 'HS256'
+ACCESS_TOKEN_EXPIRE_MINUTES = 30
 
 
 [production]
-    LOG_LEVEL='INFO'
-    RELOAD='False'
+LOG_LEVEL = 'INFO'
