--- a/settings.toml
+++ b/settings.toml
@@ -8,5 +8,11 @@ ALGORITHM = 'HS256'
 ACCESS_TOKEN_EXPIRE_MINUTES = 30
 
 
-[production]
+[PRODUCTION]
 LOG_LEVEL = 'INFO'
+HOST = '0.0.0.0'
+PORT = 8000
+
+[PRODUCTION.AUTH]
+ALGORITHM = 'HS256'
+ACCESS_TOKEN_EXPIRE_MINUTES = 1200
