--- a/settings.toml
+++ b/settings.toml
@@ -12,6 +12,8 @@ ACCESS_TOKEN_EXPIRE_MINUTES = 30
 LOG_LEVEL = 'INFO'
 HOST = '0.0.0.0'
 PORT = 8000
+SSL_CERTFILE = 'cert.pem'
+SSL_KEYFILE = 'key.pem'
 
 [PRODUCTION.AUTH]
 ALGORITHM = 'HS256'
